# NextGen-BioAgents-Hackathon-2026

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: cfr_807_87_fields.yaml  estar_checklist_nivd.yaml  ui_copy.yaml
data/samples/: glucose_monitor_notes.txt
scripts/: download_fda_guidance.py  import_510k_db.py
src/: nIVD_eSTAR_7-0_data.xml
src/fda_510k/: __init__.py  config.py
src/fda_510k/agent/: __init__.py  graph.py  state.py
src/fda_510k/extraction/: __init__.py  profile_extractor.py
src/fda_510k/ingestion/: __init__.py  chunker.py  pipeline.py
src/fda_510k/knowledge/: __init__.py  checklist.py  db_510k.py  estar_transcript.py  estar_transcript_non_ivd_v3.md
src/fda_510k/llm/: __init__.py  gemini_client.py  nebius_client.py  ollama_client.py
src/fda_510k/models/: __init__.py  common.py  gap.py  output.py  predicate.py  profile.py
src/fda_510k/output/: __init__.py  estar_mapping.py  estar_xml_export.py  formatter.py  submission_package.py
src/fda_510k_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
storage/outputs/: 0d68d996-c489-4a1a-a820-f896edc09f3a.json  12c17d3a-5dc0-4639-a42a-b7547732328b.json  15fdfe27-2bc0-4a75-b777-878c94149955.json  9714b83d-e90f-40c0-8deb-09cf82bcfd8c.json
storage/uploads/: 12748110-ce69-4231-a8bc-cc524202e11f_sample_notes.txt
tests/: test_510k_search.py  test_agent.py  test_draft_sections.py  test_enrich_profile.py  test_gap_analysis.py  test_parsers.py  test_predicate_query.py  test_submission_package.py
(+22 files in other folders)
