[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fda-510k-assistant"
version = "0.1.0"
description = "FDA 510(k) submission drafting assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "eval_type_backport>=0.2",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "ijson>=3.2",
    "rapidfuzz>=3.6",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "streamlit>=1.32",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
ocr = [
    "pytesseract>=0.3",
    "pdf2image>=1.17",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
